--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,11 @@
 <footer class="site-footer">
-    {% if site.github.is_project_page %}
-      <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
-    {% endif %}
-    <span class="site-footer-credits">© 2025 Salmeister. All rights reserved.</span>
+  <span class="site-footer-owner">
+    <a href="https://x.com/andysalmela" target="_blank" rel="noopener noreferrer">
+      <img src="{{ '/assets/images/16px-X_icon.svg' | relative_url }}" alt="Follow me on X" width="16" height="16">
+    </a>
+    <a href="{{ site.github.owner_url }}" target="_blank" rel="noopener noreferrer">
+      <img src="{{ '/assets/images/github.svg' | relative_url }}" alt="My GitHub Profile" width="16" height="16">
+    </a>
+  </span>
+  <span class="site-footer-credits">© 2025 Salmeister. All rights reserved.</span>
 </footer>
