--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,9 @@
 <footer class="site-footer">
   <span class="site-footer-owner">
     <a href="https://x.com/andysalmela" target="_blank" rel="noopener noreferrer">
-      <img src="{{ '/assets/images/16px-X_icon.svg' | relative_url }}" alt="Follow me on X" width="16" height="16">
+      <img src="{{ '/assets/images/x.svg' | relative_url }}" alt="Follow me on X" width="16" height="16">
     </a>
+    &nbsp;&nbsp;&nbsp;
     <a href="{{ site.github.owner_url }}" target="_blank" rel="noopener noreferrer">
       <img src="{{ '/assets/images/github.svg' | relative_url }}" alt="My GitHub Profile" width="16" height="16">
     </a>
