--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <div class="theme-toggle" style="position: absolute; top: 10px; right: 10px;"></div>
+      <div class="theme-toggle" style="position: absolute; top: 10px; right: 10px;">
         <span class="theme-label">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
         <path d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.79 1.42-1.41zM4 10.5H1v2h3v-2zm9-9.95h-2V3.5h2V.55zm7.45 3.91l-1.41-1.41-1.79 1.79 1.41 1.41 1.79-1.79zm-3.21 13.7l1.79 1.8 1.41-1.41-1.8-1.79-1.4 1.4zM20 10.5v2h3v-2h-3zm-8-5c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm-1 16.95h2V19.5h-2v2.95zm-7.45-3.91l1.41 1.41 1.79-1.8-1.41-1.41-1.79 1.8z"/>
@@ -28,7 +28,7 @@
         </label>
         <span class="theme-label">
           <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10c4.41 0 8.19-2.85 9.45-6.84C20.87 16.1 16.64 20 12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8c1.64 0 3.17.5 4.45 1.36C16.19 4.85 14.41 2 12 2z"/>
+            <path d="M9.37 2.29c-4.01 1.1-6.37 5.18-5.27 9.19.9 3.28 3.89 5.52 7.27 5.52 1.64 0 3.17-.5 4.45-1.36C16.19 19.15 14.41 22 12 22c-5.52 0-10-4.48-10-10S6.48 2 12 2c1.64 0 3.17.5 4.45 1.36C14.19 2.85 11.41 1.19 9.37 2.29z"/>
           </svg>
         </span>
       </div>
