--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           <span class="slider round"></span>
         </label>
         <span class="theme-label">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-            <path d="M9.37 2.29c-4.01 1.1-6.37 5.18-5.27 9.19.9 3.28 3.89 5.52 7.27 5.52 1.64 0 3.17-.5 4.45-1.36C16.19 19.15 14.41 22 12 22c-5.52 0-10-4.48-10-10S6.48 2 12 2c1.64 0 3.17.5 4.45 1.36C14.19 2.85 11.41 1.19 9.37 2.29z"/>
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
           </svg>
         </span>
       </div>
