--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
   kofiWidgetOverlay.draw('andysalmela', {
     'type': 'floating-chat',
     'floating-chat.donateButton.text': 'Support me',
-    'floating-chat.donateButton.background-color': '#00b9fe',
+    'floating-chat.donateButton.background-color': '#2196F3',
     'floating-chat.donateButton.text-color': '#fff'
   });
 </script>
