try out header background

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,9 @@
   padding-top: 1rem; // Reduce top padding
   padding-bottom: 1rem; // Reduce bottom padding
   min-height: auto; // Remove minimum height if set
+  background-image: url('../images/thehealthylifestyleguide.png'); // Add background image
+  background-size: cover; // Ensure the image covers the entire header
+  background-position: center; // Center the image
 }
 
 .theme-toggle {
