--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,8 @@
     const involvementDetails = document.querySelector('.involvement-details');
   
     toggleButton.addEventListener('click', function() {
-      if (involvementDetails.style.display === "none") {
+      this.classList.toggle('active'); // Toggle the active class for icon change
+      if (involvementDetails.style.display === "none" || involvementDetails.style.display === "") {
         involvementDetails.style.display = "block";
         involvementDetails.classList.add('show');
       } else {
