--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
       </div>
       <br />
       <br />
-      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h1 class="project-name">[{{ site.title }}](/)</h1>
+      <h2 class="project-tagline">{{ site.description }}</h2>
     </header>
 
     <main id="content" class="main-content" role="main">
