--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       </div>
       <br />
       <br />
-      <h1 class="project-name"><a href="/">{{ site.title }}</a></h1>
+      <h1 class="project-name"><a href="/" class="project-name-link">{{ site.title }}</a></h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
     </header>
 
