--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,3 @@
-<meta property="og:title" content="{{ site.description }}">
-<meta property="og:description" content="{{ site.description }}">
-<meta property="og:image" content='./assets/images/thehealthylifestyleguide.png'>
-<meta property="og:url" content="https://thehealthylifestyleguide.com/">
+<meta property="og:image" content="https://thehealthylifestyleguide.com/assets/images/thehealthylifestyleguide.png">
+<meta name="twitter:image" content="https://thehealthylifestyleguide.com/assets/images/thehealthylifestyleguide.png">
 <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22><text y=%2216%22 font-size=%2220%22>😇</text></svg>">
