--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -238,9 +238,13 @@ body.dark-mode {
 
 .dark-mode {
   .search-input {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(45, 45, 45, 0.95);
     color: #fff;
-    border-color: rgba(255, 255, 255, 0.3);
+    border-color: rgba(255, 255, 255, 0.5);
+
+    &::placeholder {
+      color: rgba(255, 255, 255, 0.7);
+    }
   }
   
   .search-results {
