--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,3 +1,7 @@
 <meta property="og:image" content="https://thehealthylifestyleguide.com/assets/images/thehealthylifestyleguide-thumbnail.png">
 <meta name="twitter:image" content="https://thehealthylifestyleguide.com/assets/images/thehealthylifestyleguide-thumbnail.png">
-<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22><text y=%2216%22 font-size=%2220%22>😇</text></svg>">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 24 24%22><text y=%2216%22 font-size=%2220%22>😇</text></svg>
+
+<!-- Search functionality -->
+<script src="https://unpkg.com/lunr/lunr.js"></script>
+<script src="{{ '/assets/js/search.js' | relative_url }}"></script>
