--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
       
       <!-- Add search box -->
       <div class="search-container">
-        <input type="text" id="search-input" placeholder="Search Summaries..." class="search-input">
+        <input type="text" id="search-input" placeholder="Search Notes..." class="search-input">
         <div id="search-results" class="search-results"></div>
       </div>
     </header>
