Add "General Health" link to footer and update navigation text for clarity

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,7 @@
       <h4>Quick Links</h4>
       <ul>
         <li><a href="/#diet--nutrition-">Diet & Nutrition</a></li>
+        <li><a href="/#health--wellness-️">General Health</a></li>
         <li><a href="/#exercise--fitness-">Exercise & Fitness</a></li>
         <li><a href="/#sleep-optimization-">Sleep Optimization</a></li>
         <li><a href="/#brain-health--stress-management-">Brain Health</a></li>
