Add "Home" link to footer for improved navigation

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,7 @@
     <div class="footer-section">
       <h4>Quick Links</h4>
       <ul>
+        <li><a href="/">Home</a></li>
         <li><a href="/#diet--nutrition-">Diet & Nutrition</a></li>
         <li><a href="/#health--wellness-️">General Health</a></li>
         <li><a href="/#exercise--fitness-">Exercise & Fitness</a></li>
