--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,11 +89,40 @@
           <h1 itemprop="headline">
             {{ page.title }}
             {% if page.link %}
-            <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="link-url" aria-label="Watch on YouTube">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="#FF0000" style="margin-left: 10px; vertical-align: middle;">
-                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-              </svg>
-            </a>
+              {% assign link_url = page.link | downcase %}
+              {% if link_url contains 'youtube.com' or link_url contains 'youtu.be' %}
+                <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="platform-link youtube-link" aria-label="Watch on YouTube">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="#FF0000" style="margin-left: 10px; vertical-align: middle;">
+                    <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+                  </svg>
+                </a>
+              {% elsif link_url contains 'spotify.com' %}
+                <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="platform-link spotify-link" aria-label="Listen on Spotify">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="#1DB954" style="margin-left: 10px; vertical-align: middle;">
+                    <path d="M12 0C5.4 0 0 5.4 0 12s5.4 12 12 12 12-5.4 12-12S18.66 0 12 0zm5.521 17.34c-.24.359-.66.48-1.021.24-2.82-1.74-6.36-2.101-10.561-1.141-.418.122-.779-.179-.899-.539-.12-.421.18-.78.54-.9 4.56-1.021 8.52-.6 11.64 1.32.42.18.479.659.301 1.02zm1.44-3.3c-.301.42-.841.6-1.262.3-3.239-1.98-8.159-2.58-11.939-1.38-.479.12-1.02-.12-1.14-.6-.12-.48.12-1.021.6-1.141C9.6 9.9 15 10.561 18.72 12.84c.361.181.54.78.241 1.2zm.12-3.36C15.24 8.4 8.82 8.16 5.16 9.301c-.6.179-1.2-.181-1.38-.721-.18-.601.18-1.2.72-1.381 4.26-1.26 11.28-1.02 15.721 1.621.539.3.719 1.02.42 1.56-.299.421-1.02.599-1.559.3z"/>
+                  </svg>
+                </a>
+              {% elsif link_url contains 'podcasts.apple.com' or link_url contains 'itunes.apple.com' %}
+                <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="platform-link apple-link" aria-label="Listen on Apple Podcasts">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="#000000" style="margin-left: 10px; vertical-align: middle;">
+                    <path d="M12.152 6.896c-.948 0-2.415-1.078-3.96-1.04-2.04.027-3.91 1.183-4.961 3.014-2.117 3.675-.546 9.103 1.519 12.09 1.013 1.454 2.208 3.09 3.792 3.039 1.52-.065 2.09-.987 3.935-.987 1.831 0 2.35.987 3.96.948 1.637-.026 2.676-1.48 3.676-2.948 1.156-1.688 1.636-3.325 1.662-3.415-.039-.013-3.182-1.221-3.22-4.857-.026-3.04 2.48-4.494 2.597-4.559-1.429-2.09-3.623-2.324-4.39-2.376-2-.156-3.675 1.09-4.61 1.09zM15.53 3.83c.843-1.012 1.4-2.427 1.245-3.83-1.207.052-2.662.805-3.532 1.818-.78.896-1.454 2.338-1.273 3.714 1.338.104 2.715-.688 3.559-1.701"/>
+                  </svg>
+                </a>
+              {% elsif link_url contains 'amazon.com' %}
+                <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="platform-link amazon-link" aria-label="View on Amazon">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="#FF9900" style="margin-left: 10px; vertical-align: middle;">
+                    <path d="M.045 18.02c.072-.116.187-.124.348-.022 3.636 2.11 7.594 3.166 11.87 3.166 2.852 0 5.668-.533 8.447-1.595l.315-.14c.138-.06.234-.1.293-.13.226-.088.39-.046.525.13.12.174.09.39-.12.524-.06.04-.15.09-.285.14-.42.2-.87.4-1.364.614-2.85 1.23-5.674 1.848-8.476 1.848-4.51 0-8.71-1.134-12.597-3.398-.165-.09-.27-.18-.3-.27-.074-.18-.016-.344.174-.524l.17-.14zm23.71.85c-.525.18-1.05.36-1.574.54-.33.12-.69.21-1.08.27-.51.08-1.02.12-1.53.12-.99 0-1.98-.15-2.97-.45-.99-.3-1.89-.81-2.7-1.53-.57-.51-1.05-1.08-1.44-1.71-.54-.87-.81-1.8-.81-2.79 0-1.32.36-2.46 1.08-3.42.72-.96 1.68-1.68 2.88-2.16 1.2-.48 2.46-.72 3.78-.72.99 0 1.98.15 2.97.45.99.3 1.89.78 2.7 1.44.81.66 1.44 1.5 1.89 2.52.45 1.02.675 2.16.675 3.42 0 .63-.075 1.26-.225 1.89-.15.63-.375 1.23-.675 1.8-.3.57-.675 1.08-1.125 1.53zm-3.825-6.75c-.675-.51-1.425-.765-2.25-.765-.825 0-1.575.255-2.25.765-.675.51-1.2 1.2-1.575 2.07-.375.87-.5625 1.83-.5625 2.88s.1875 2.01.5625 2.88c.375.87.9 1.56 1.575 2.07.675.51 1.425.765 2.25.765.825 0 1.575-.255 2.25-.765.675-.51 1.2-1.2 1.575-2.07.375-.87.5625-1.83.5625-2.88s-.1875-2.01-.5625-2.88c-.375-.87-.9-1.56-1.575-2.07z"/>
+                  </svg>
+                </a>
+              {% else %}
+                <a href="{{ page.link }}" target="_blank" rel="noopener noreferrer" class="platform-link generic-link" aria-label="External Link">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="margin-left: 10px; vertical-align: middle;">
+                    <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
+                    <polyline points="15,3 21,3 21,9"></polyline>
+                    <line x1="10" y1="14" x2="21" y2="3"></line>
+                  </svg>
+                </a>
+              {% endif %}
             {% endif %}
           </h1>
           {% if page.description %}
